--- a/src/site/_includes/components/sidebar.njk
+++ b/src/site/_includes/components/sidebar.njk
@@ -37,7 +37,7 @@
                               <div class="toc">
                                     <div class="toc-title-container">
                                           <div class="toc-title">
-                                                On this page
+                                                本页大纲
                                           </div>
                                     </div>
                                     <div class="toc-container">
@@ -51,7 +51,7 @@
                         {%if settings.dgShowBacklinks === true %}
                               {%if settings.dgShowBacklinks === true %}
                               <div class="backlinks">
-                                    <div class="backlink-title" style="margin: 4px 0 !important;">Pages mentioning this page</div>
+                                    <div class="backlink-title" style="margin: 4px 0 !important;">相关主题</div>
                                           <div class="backlink-list">
                                           {%- if page.url == "/" -%}
                                                 {%- if graph.nodes[graph.homeAlias].backLinks.length === 0 -%}
