--- a/src/site/_includes/components/sidebar.njk
+++ b/src/site/_includes/components/sidebar.njk
@@ -7,7 +7,7 @@
                   {%if settings.dgShowLocalGraph === true%}
                         <div class="graph">
                               <div class="graph-title-container">
-                                    <div class="graph-title">Connected Pages</div>
+                                    <div class="graph-title">关系图谱</div>
                                     <div id="graph-controls">
                                           <div class="depth-control">
                                                 <label for="graph-depth">Depth</label>
