--- a/src/site/_includes/components/sidebar.njk
+++ b/src/site/_includes/components/sidebar.njk
@@ -5,30 +5,7 @@
                         {% include imp %}
                   {% endfor %}
                   {%if settings.dgShowLocalGraph === true%}
-                        <div class="graph">
-                              <div class="graph-title-container">
-                                    <div class="graph-title">关系图谱</div>
-                                    <div id="graph-controls">
-                                          <div class="depth-control">
-                                                <label for="graph-depth">Depth</label>
-                                                <div class="slider">
-                                                      <input name="graph-depth" list="depthmarkers" type="range" step="1" min="1" max="3" id="graph-depth"/>
-                                                <datalist id="depthmarkers">
-                                                      <option value="1" label="1"></option>
-                                                      <option value="2" label="2"></option>
-                                                      <option value="3" label="3"></option>
-                                                </datalist>
-                                                </div>
-                                                <span id="depth-display"></span>
-                                          </div>
-                                          <div class="ctrl-right">
-                                                <span id="global-graph-btn"><i  icon-name="globe" aria-hidden="true"></i></span>
-                                                <span  id="graph-fs-btn"><i  icon-name="expand" aria-hidden="true"></i></span>
-                                          </div>
-                                    </div>
-                              </div>
-                              <div id="link-graph"></div>
-                        </div>
+                        {%include "components/graphScript.njk"%}
                   {%endif%}
 
                   {%if settings.dgShowToc === true%}
@@ -37,7 +14,7 @@
                               <div class="toc">
                                     <div class="toc-title-container">
                                           <div class="toc-title">
-                                                本页大纲
+                                                On this page
                                           </div>
                                     </div>
                                     <div class="toc-container">
@@ -51,7 +28,7 @@
                         {%if settings.dgShowBacklinks === true %}
                               {%if settings.dgShowBacklinks === true %}
                               <div class="backlinks">
-                                    <div class="backlink-title" style="margin: 4px 0 !important;">相关主题</div>
+                                    <div class="backlink-title" style="margin: 4px 0 !important;">Pages mentioning this page</div>
                                           <div class="backlink-list">
                                           {%- if page.url == "/" -%}
                                                 {%- if graph.nodes[graph.homeAlias].backLinks.length === 0 -%}
@@ -90,7 +67,3 @@
             </div>
       </div>
 </aside>
-
-{%if settings.dgShowLocalGraph === true %}
-      {%include "components/graphScript.njk"%}
-{% endif %}
